Fix: Scrollbar, Quote + Add: NuSpoiler Fix

--- a/Firefox/enhance.css
+++ b/Firefox/enhance.css
@@ -68,7 +68,6 @@
   width:100%;
   height:100%;
   overflow-y:scroll;
-  padding-right:17px;
   box-sizing:content-box;
 }
 .addCommentface {
@@ -119,4 +118,7 @@
 .browseAniListtable tr .anilistsearchimg:hover {
   filter:brightness(120%);
   border:5px solid red;
+}
+.spoiler-text-tooltip {
+  display: none !important;
 }
